--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,104 @@
 .container {
-  padding: 0 2rem;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
+  padding: 1.5rem 30px 2rem;
   flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+  overflow: scroll;
 }
 
 .title {
-  margin: 0;
+  margin: 0 0 0.5rem;
   line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
   font-size: 1.5rem;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
+.settings {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+  border-top: 1px solid var(--light-gray);
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+.units {
+  margin-top: 0.5rem;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.option {
+  padding: 0;
+  border: none;
+  font-size: 16px;
+  background-color: var(--white);
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.active {
+  font-weight: bold;
+}
+ 
+.inactive {
+  text-decoration: underline;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.checkbox {
+  display: inline-flex;
+  position: relative;
+  margin-top: 10px;
+  margin-left: auto;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.input {
+  margin-right: 10px;
+  height: 18px;
+  width: 18px;
+
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+
+  border: 2.5px solid var(--black);
+  border-radius: 3px;
+}
+
+.input:checked {
+  background-color: var(--light-gray);
+}
+
+.input:checked:before {
+  position: absolute;
+  content: url(../public/check.svg);
+  display: block;
+  top: 4px;
+  left: 5px;
+}
+
+.asteroids {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  /* column-gap: 76px; */
+  grid-template-rows: repeat(2, 1fr);
+  row-gap: 2rem;
 }
 
 @media (max-width: 600px) {
-  .grid {
-    width: 100%;
+  .main {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .settings {
     flex-direction: column;
   }
-}
 
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
+  .checkbox {
+    margin-left: 0;
   }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
+
+  .asteroids {
+    margin-top: 34px;
+    grid-template-columns: 1fr;
   }
 }
