--- a/styles/AsteroidCard.module.css
+++ b/styles/AsteroidCard.module.css
@@ -30,3 +30,11 @@
 
   background-color: var(--blue);
 }
+
+.button:hover {
+  cursor: pointer;
+}
+
+.button:active {
+  background-color: #0D47A1;
+}
